--- a/WebBase/WebBase/appsettings.json
+++ b/WebBase/WebBase/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-WebBase-58C1A74D-BE2C-4228-8C3B-79D4A81D153C;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=BLACKPEARL;Database=Localdb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
@@ -9,5 +9,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "User": "email@email.com",
+  "Pwd": "Password" 
 }
