--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,6 @@ jobs:
       with:
         dotnet-version: '3.1.100'
     - name: Restore with dotnet
-      run: dotnet restore --configuration Release
+      run: dotnet restore .\WebBase\WebBase.sln
     - name: Build with dotnet
-      run: dotnet build --configuration Release
+      run: dotnet build .\WebBase\WebBase.sln
