--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,8 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '3.1.100'
+   - name: echo
+      run: pwd
     - name: Restore with dotnet
       run: dotnet restore .\WebBase\WebBase.sln
     - name: Build with dotnet
