--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,9 +14,9 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '3.1.100'
-   - name: echo
+    - name: echo
       run: pwd
     - name: Restore with dotnet
-      run: dotnet restore .\WebBase\WebBase.sln
+      run: dotnet restore \WebBase.sln
     - name: Build with dotnet
       run: dotnet build .\WebBase\WebBase.sln
