--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,6 @@ jobs:
     - name: Install dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet build --configuration Release --no-restore .\WebBase\WebBase.sln
+      run: dotnet build --configuration Release --no-restore ./WebBase/WebBase.sln
     - name: Test
       run: dotnet test --no-restore --verbosity normal .\WebBase\WebBase.sln
