--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       with:
         dotnet-version: 3.1.101
     - name: Install dependencies
-      run: dotnet restore  .\WebBase\WebBase.sln
+      run: dotnet restore  ./WebBase/WebBase.sln
     - name: Build
       run: dotnet build  ./WebBase.sln
     - name: Test
