--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,6 @@ jobs:
     - name: echo
       run: pwd
     - name: Restore with dotnet
-      run: dotnet restore .\basesolutioncore\WebBase\WebBase.sln
+      run: dotnet restore  ../WebBase/
     - name: Build with dotnet
       run: dotnet build .\WebBase\WebBase.sln
