--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,6 @@ jobs:
     - name: echo
       run: ls
     - name: Restore with dotnet
-      run: dotnet restore  /WebBase/WebBase.csproj
+      run: dotnet restore  .\WebBase\WebBase.sln
     - name: Build with dotnet
       run: dotnet build 
